Add blocked FFT test for FloatVectors